# vjepa2

./: .gitignore  CLAUDE.md  checkpoints  convert_go_stanford_to_vjepa.py  convert_nav_bags_to_vjpea_droid.py  convert_rlds_to_vjepa_droid.py  datasets  debug_gpu.py  decoder_diffusion_demo.py  decoder_vis_demo.py  decoder_vis_demo_lfh.py  inspect_h5.py  monitor_and_run.py  navigation_visualization.py  navigation_worldmodel_test.py  package-lock.json  plot_training_loss.py  pyproject.toml  save_hub_model.py  test_data_loading.py  test_go_stanford_loading.py  test_gpu_usage.py  test_modified_worldmodel.py  test_navigation_optimization.py  test_progress_bar.py  v_jepa2_ac_decoder_vis.ipynb  v_jepa2_ac_decoder_vis.py  v_jepa2_ac_door_nav.py  v_jepa2_ac_empty_nav.py  vjepa2_ac_vis_comparison.py  worldmodel_control.py
app/: main.py  main_distributed.py  main_torchrun.py
app/vjepa/: train.py
app/vjepa_dreamer_model/: train.py  utils.py
app/vjepa_droid/: train.py
app/vjepa_droid_decoder/: train.py  utils.py
app/vjepa_droid_dreamer/: droid.py  train.py  utils.py
app/vjepa_reward_done_head/: droid.py  train.py  utils.py
app/vjepa_value_head/: train.py  utils.py
notebooks/: energy_landscape_example.ipynb  vjepa2_demo.ipynb  vjepa2_demo.py
notebooks/utils/: mpc_utils.py  world_model_wrapper.py
ppo_dreamer_episode_data_13-12-25-23_17/: episode_index.csv
ppo_dreamer_episode_data_13-12-25-23_17/episode_0001_20251213_231718/: metadata.json  trajectory.h5
tests/: test_droid_dataset_helpers.py
(+3999 files in other folders)
