[project]
name = "vjepa2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "decord>=0.6.0",
    "einops>=0.8.1",
    "h5py>=3.14.0",
    "imageio[pyav]>=2.37.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "rosbags>=0.10.11",
    "scipy>=1.16.3",
    "tensorflow>=2.20.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
[tool.isort]
profile="black"
line_length=119

[tool.black]
line-length = 119
